[package]
name = "webcam"
version = "0.1.0"
edition = "2021"

[dependencies]
# Version set for all examples in parent: ../Cargo.toml
str0m = "*"
util = { path ="../util" }

anyhow = "1.0.71"
rouille = { version = "3.6.2", features = ["ssl"] }
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
serde_json = "1.0.99"
